@@ -187,13 +187,19 @@
 
 
     <h1>Test-AdminPrivileges</h1>
-    <div><p>Checks that you're running as an administrator, and returns $true if you are, $false otherwise.</p>
+    <div><p>Checks if the current user is an administrator or has administrative privileges.</p>
 </div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Test-AdminPrivileges [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Many tools, cmdlets, and APIs require administative privileges.  Use this function to check.  Returns <code>True</code> if the current user has administrative privileges, or <code>False</code> if he doesn't.  Or she.  Or it.  </p>
+
+<p>This function handles UAC and computers where UAC is disabled.</p>
+
+    </div>
     
     
 
@@ -205,6 +211,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Test-AdminPrivileges</code></pre>
+            <p><p>Returns <code>True</code> if the current user has administrative privileges, or <code>False</code> if the user doesn't.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
