@@ -35,6 +35,7 @@
   * [Convert-SecureStringToString](http://get-carbon.org/help/Convert-SecureStringToString.html)
   * [Grant-Permissions](http://get-carbon.org/help/Grant-Permissions.html)
   * [New-Credential](http://get-carbon.org/help/New-Credential.html)
+  * [Test-AdminPrivileges](http://get-carbon.org/help/Test-AdminPrivileges.html)
 * Improved whitespace in HTML documentation code samples.
 
 
